Removed test cases with errors